--- a/admin/view/template/marketing/coupon_form2.twig
+++ b/admin/view/template/marketing/coupon_form2.twig
@@ -1,32 +1,30 @@
-{% extends helper.template("seller/_partial/layout") %}
-{% block header %}
-<script src="admin/view/javascript/jquery/datetimepicker/moment/moment.min.js" type="text/javascript"></script>
-<script src="admin/view/javascript/jquery/datetimepicker/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
-<link href="admin/view/javascript/jquery/datetimepicker/bootstrap-datetimepicker.min.css" type="text/css" rel="stylesheet" media="screen"/>
-{% endblock %}
-
-{% block body_class 'seller-edit' %}
-
-{% block content %}
-  <div id="content">
-  <div class="container-fluid">
-    <div class="panel panel-default">
-      <div class="pull-right" style="margin-top:1.5px;margin-right:2px;">
+{{ header }}{{ column_left }}
+<div id="content">
+  <div class="page-header">
+    <div class="container-fluid">
+      <div class="pull-right">
         <button type="submit" form="form-coupon" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i></button>
-        <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a>
+        <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a></div>
+      <h1>{{ heading_title }}</h1>
+      <ul class="breadcrumb">
+        {% for breadcrumb in breadcrumbs %}
+          <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <div class="container-fluid"> {% if error_warning %}
+      <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
       </div>
-
+    {% endif %}
+    <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_form }}</h3>
       </div>
       <div class="panel-body">
         <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-coupon" class="form-horizontal">
-          {# <ul class="nav nav-tabs">
-            <li class="active"><a href="#tab-general" data-toggle="tab">{{ tab_general }}</a></li>
-            {% if coupon_id %}
-              <li><a href="#tab-history" data-toggle="tab">{{ tab_history }}</a></li>
-            {% endif %}
-          </ul> #}
+          
           <div class="tab-content">
             <div class="tab-pane active" id="tab-general">
               <div class="form-group required">
@@ -37,7 +35,7 @@
                     <div class="text-danger">{{ error_name }}</div>
                   {% endif %} </div>
               </div>
-              
+
               <div class="form-group required">
                 <label class="col-sm-2 control-label" for="input-code"><span data-toggle="tooltip" title="{{ help_explain }}">{{ entry_explain }}</span></label>
                 <div class="col-sm-10">
@@ -162,7 +160,7 @@
                 </div>
               </div>
 
-              {# <div class="form-group">
+              <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-uses-total"><span data-toggle="tooltip" title="{{ help_launch_scene }}">{{ entry_launch_scene }}</span></label>
                 <div class="col-sm-10">
                   <select name="launch_scene" id="input-status" class="form-control">
@@ -177,8 +175,8 @@
 
                   </select>
                 </div>
-              </div> #}
-              
+              </div>
+
             </div>
           </div>
         </form>
@@ -186,13 +184,150 @@
     </div>
   </div>
 </div>
-{% endblock %}
-
-{% block footer %}
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-  language: '{{ datepicker }}',
-  pickTime: false
+$('input[name=\'product\']').autocomplete({
+	'source': function(request, response) {
+		$.ajax({
+			url: 'index.php?route=catalog/product/autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
+			dataType: 'json',
+			success: function(json) {
+				response($.map(json, function(item) {
+					return {
+						label: item['name'],
+						value: item['product_id']
+					}
+				}));
+			}
+		});
+	},
+	'select': function(item) {
+		$('input[name=\'product\']').val('');
+
+		$('#coupon-product' + item['value']).remove();
+
+		$('#coupon-product').append('<div id="coupon-product' + item['value'] + '"><i class="fa fa-minus-circle"></i> ' + item['label'] + '<input type="hidden" name="coupon_product[]" value="' + item['value'] + '" /></div>');
+	}
+});
+
+$('#coupon-product').delegate('.fa-minus-circle', 'click', function() {
+	$(this).parent().remove();
+});
+
+// Category
+$('input[name=\'category\']').autocomplete({
+	'source': function(request, response) {
+		$.ajax({
+			url: 'index.php?route=catalog/category/autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
+			dataType: 'json',
+			success: function(json) {
+				response($.map(json, function(item) {
+					return {
+						label: item['name'],
+						value: item['category_id']
+					}
+				}));
+			}
+		});
+	},
+	'select': function(item) {
+		$('input[name=\'category\']').val('');
+
+		$('#coupon-category' + item['value']).remove();
+
+		$('#coupon-category').append('<div id="coupon-category' + item['value'] + '"><i class="fa fa-minus-circle"></i> ' + item['label'] + '<input type="hidden" name="coupon_category[]" value="' + item['value'] + '" /></div>');
+	}
+});
+
+$('#coupon-category').delegate('.fa-minus-circle', 'click', function() {
+	$(this).parent().remove();
 });
 //--></script>
-{% endblock %}
+{% if coupon_id %}
+  <script type="text/javascript"><!--
+  $('#history').delegate('.pagination a', 'click', function(e) {
+	  e.preventDefault();
+
+	  $('#history').load(this.href);
+  });
+
+  $('#history').load('index.php?route=marketing/coupon/history&user_token={{ user_token }}&coupon_id={{ coupon_id }}');
+  //--></script>
+{% endif %}
+<script type="text/javascript"><!--
+$('.date').datetimepicker({
+	language: '{{ datepicker }}',
+	pickTime: false
+});
+//--></script>
+<script type="text/javascript">
+  $( document ).ready(function() {
+    $('#code-generate').click(function() {
+      $.ajax({
+            url: 'index.php?route=marketing/customercoupon/generateCoupon&user_token={{ user_token }}&coupon_id={{ coupon_id }}',
+            dataType: 'json',
+            type : 'get',
+            success: function(data){
+            $("#code").find(".loading").remove();
+              if(data) {
+                $("input[name='code']").val(data.coupon_code);
+              }
+
+            }
+        })
+    });
+  });
+</script>
+<script type="text/javascript"><!--
+  $('input[name=\'customer\']').autocomplete({
+    'source': function(request, response) {
+      $.ajax({
+        url: 'index.php?route=customer/customer/autocomplete&user_token={{ user_token }}&filter_customer=' + encodeURIComponent(request),
+        dataType: 'json',
+        success: function(json) {
+          response($.map(json, function(item) {
+            return {
+              label: item['name'],
+              value: item['customer_id']
+            }
+          }));
+        }
+      });
+    },
+    'select': function(item) {
+      $('input[name=\'customer\']').val('');
+      $('#coupon-customer' + item['value']).remove();
+      $('#coupon-customer').append('<div id="coupon-customer' + item['value'] + '"><i class="fa fa-minus-circle"></i> ' + item['label'] + '<input type="hidden" name="coupon_customer[]" value="' + item['value'] + '" /></div>');
+    }
+  });
+
+  $('#coupon-customer').delegate('.fa-minus-circle', 'click', function() {
+    $(this).parent().remove();
+  });
+
+  $('input[name=\'customer_group\']').autocomplete({
+    'source': function(request, response) {
+      $.ajax({
+        url: 'index.php?route=customer/customer_group/autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
+        dataType: 'json',
+        success: function(json) {
+          response($.map(json, function(item) {
+            return {
+              label: item['name'],
+              value: item['customer_group_id']
+            }
+          }));
+        }
+      });
+    },
+    'select': function(item) {
+      $('input[name=\'customer_group\']').val('');
+      $('#coupon-customer_group' + item['value']).remove();
+      $('#coupon-customer_group').append('<div id="coupon-customer_group' + item['value'] + '"><i class="fa fa-minus-circle"></i> ' + item['label'] + '<input type="hidden" name="coupon_customer_group[]" value="' + item['value'] + '" /></div>');
+    }
+  });
+
+  $('#coupon-customer_group').delegate('.fa-minus-circle', 'click', function() {
+    $(this).parent().remove();
+  })
+//--></script>
+{{ footer }}
