--- a/admin/view/template/marketing/coupon_list2.twig
+++ b/admin/view/template/marketing/coupon_list2.twig
@@ -1,27 +1,30 @@
-{% extends helper.template("seller/_partial/layout") %}
-{% block header %}
-  
-{% endblock %}
-
-{% block body_class 'seller-edit' %}
-
-{% block content %}
-  <div id="content">
-   {% if success %}
-    <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
-  {% endif %}
-  {% if error_warning %}
-    <div class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
-  {% endif %}
-    
-  <div class="container-fluid">
-    
-    <div class="panel panel-default">
-      <div class="pull-right" style="margin-top:1.5px;margin-right:2px;">
-        <a href="{{ add }}" data-toggle="tooltip" class="btn btn-primary" title="{{ text_add }}"><i class="fa fa-plus"></i></a>
-        <button type="button" form="form-product" formaction="{{ delete }}" data-toggle="tooltip" class="btn btn-danger" onclick="confirm('{{ text_confirm }}') ? $('#form-coupon').submit() : false;" title="{{ text_delete }}"><i class="fa fa-trash-o"></i></button>
+{{ header }}{{ column_left }}
+<div id="content">
+  <div class="page-header">
+    <div class="container-fluid">
+      <div class="pull-right"><a href="{{ add }}" data-toggle="tooltip" title="{{ button_add }}" class="btn btn-primary"><i class="fa fa-plus"></i></a>
+        <button type="button" data-toggle="tooltip" title="{{ button_delete }}" class="btn btn-danger" onclick="confirm('{{ text_confirm }}') ? $('#form-coupon').submit() : false;"><i class="fa fa-trash-o"></i></button>
       </div>
-
+      <h1>{{ heading_title }}</h1>
+      <ul class="breadcrumb">
+        {% for breadcrumb in breadcrumbs %}
+        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <div class="container-fluid">
+    {% if error_warning %}
+    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+    {% endif %}
+    {% if success %}
+    <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+    {% endif %}
+    <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-list"></i> {{ text_list }}</h3>
       </div>
@@ -121,8 +124,4 @@
     </div>
   </div>
 </div>
-{% endblock %}
-
-{% block footer %}
-
-{% endblock %}
+{{ footer }}
